@@ -1,3 +1,12 @@
+1999-05-25 Derek Price
+	<http://www-personal.engin.umich.edu/~oberon/resume.html>
+	and Jim Kingdon
+
+	* log.c: Remove comment which said "you can delete [this line]"
+	and which stuck around for over 3 years.
+	* sanity.sh (errmsg2 & tagdate): Added tests to prove the
+	current functionality with respect to combining -r and -D.
+
 1999-05-20  Larry Jones  <larry.jones@sdrc.com>
 
 	* server.c (pserver_authenticate_connection): Previous changes
